--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
 
     
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+SC:wght@600&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <title>Movie App</title>
   
   </head>
